Sun Jun  8 01:42:08 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.cpp:
        
          . Apparently, == does not work for string comparisons. So, I
            had to update the dispatch method to use equals () instead.
            
          . Appended jbi_ to all the environment action methods to 
            be consistent with the underlying framework.

Sun Jun  8 08:40:30 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/cuts_java_Logger.cpp:

          Removed unncessary code.

Sun Jun  8 08:27:29 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/CUTS.mpc:
          etc/config/jni.mpb
          etc/config/jnilib.mpb

          Fixed build errors on non-Windows systems.

        * cuts/cuts_java_Logger.cpp:

          Removed unused code.

Sun Jun  8 07:56:17 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/java/jbi/client/JbiClient.java:

          Prefixed jbi_ to the environment/lifecycle methods.

        * cuts/java/jbi/client/JbiClientApp.java:

          The creation of the JBI connection manager is handled by the
          client application. The client object is passed a valid connection
          manager by the hosting application/container (similar to a
          context).

Sat Jun  7 20:53:41 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/cuts.java.jbi.client.build:

          JAR file was missing sevaral Java classes.

Sat Jun  7 20:13:56 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-msglog.sql:

          Fixed the primary key definition for the message table.

Fri Jun  6 21:00:33 UTC 2008  Hamilton_Turner  <hamilton.a.turner@vanderbilt.edu>

        * utils/BMW/website/metrics_temp/cuts_try_2/Default.aspx.cs:

          Added default text parsing and data retrieval from DB

        * utils/BMW/website/metrics_temp/strategy_test:
